feat(gui): Start with hide-completed toggle active by default
Changes the default value of hideCompleted from false to true,
so the GUI starts with completed tasks hidden by default.

Users can still toggle this off using the switch in the UI.

Closes: bn-55b2

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -2327,7 +2327,7 @@
                 // Stat highlight filter state (null = no filter active)
                 highlightFilter: null,  // e.g., 'bugs', 'blocked', 'ready', 'ideas', 'milestones'
                 // Hide completed nodes filter
-                hideCompleted: false,  // When true, hide completed nodes except those in active chains
+                hideCompleted: true,  // When true, hide completed nodes except those in active chains
                 // Chain length filter (1 = no filter, 2+ = only show nodes in chains of at least that length)
                 minChainLength: 1,
                 // Search filter
